[package]
name = "gret"
version = "0.1.0"
authors = ["sunny-Ne5 <sunny.tiwari505@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gret"
path = "src/main.rs"

[dependencies]
structopt = "0.3.13"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"